# basis-network

./: .gitignore  CONTRIBUTING.md  DEPLOYMENTS.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
.internal/: deployments.md
adapter/: .env.example
adapter/src/: demo.ts  index.ts
adapter/src/common/: provider.ts
contracts/: .env.example  hardhat.config.ts  package.json
contracts/contracts/connectors/: PLASMAConnector.sol
contracts/contracts/core/: TraceabilityRegistry.sol
contracts/contracts/verification/: ZKVerifier.sol
contracts/scripts/: demo-zk-verify.ts  deploy-full-demo.ts  deploy.ts
contracts/test/: EnterpriseRegistry.test.ts  PLASMAConnector.test.ts  TraceabilityRegistry.test.ts  ZKVerifier.test.ts
dashboard/: .env.example  package-lock.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ActivityFeed.tsx  ClientLayout.tsx  EnterpriseList.tsx  ModuleCard.tsx  NetworkParticles.tsx  Sidebar.tsx  StatCard.tsx
dashboard/src/lib/: contracts.ts
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  L2_MVP_VISION.md  MOSCOW.md  TECHNICAL_DECISIONS.md  USER_JOURNEY.md
l1/: README.md
l1-config/: genesis.json
l1/config/: genesis.json
l1/config/node-config/: node.json
l1/contracts/: README.md  hardhat.config.ts  package-lock.json
l1/contracts/scripts/: deactivate-ingenio.ts  demo-zk-verify.ts  deploy-all.ts  deploy-full-demo.ts  deploy-validium.ts  deploy.ts  register-demo-enterprise.ts
l1/contracts/test/: CrossEnterpriseVerifier.test.ts  DACAttestation.test.ts  StateCommitment.test.ts  TraceConnector.test.ts  TraceabilityRegistry.test.ts
l1/dashboard/: .env.example  README.md  package-lock.json  package.json
lab/: CLAUDE.md.example  NOTICE.md  README.md
lab/1-scientist/: CLAUDE.md.example
lab/1-scientist/memory/: global.md
lab/1-scientist/sessions/: 2026-03-18_batch-aggregation-paper.md  2026-03-18_batch-aggregation.md  2026-03-18_cross-enterprise-paper.md  2026-03-18_cross-enterprise.md  2026-03-18_data-availability-committee-paper.md  2026-03-18_data-availability.md  2026-03-18_enterprise-node-paper.md  2026-03-18_enterprise-node.md  2026-03-18_sparse-merkle-tree-paper.md  2026-03-18_sparse-merkle-tree.md  2026-03-18_state-commitment-paper.md  2026-03-18_state-commitment.md  2026-03-18_state-transition-circuit-paper.md  2026-03-18_state-transition-circuit.md  2026-03-19_basis-rollup.md  2026-03-19_bridge.md  2026-03-19_e2e-pipeline.md  2026-03-19_enterprise-node-standardize.md  2026-03-19_evm-executor.md  2026-03-19_plonk-migration.md  2026-03-19_production-dac.md  2026-03-19_proof-aggregation.md  2026-03-19_sequencer.md  2026-03-19_state-database.md  2026-03-19_witness-generation.md  2026-03-20_hub-and-spoke.md  agent-prompt-ruv3.md  agent-prompt-ruv5.md
lab/2-logicist/: CLAUDE.md.example
lab/2-logicist/docs/: GLOSSARY.md
lab/2-logicist/sessions/: 2026-03-18_batch-aggregation.md  2026-03-18_cross-enterprise.md  2026-03-18_data-availability.md  2026-03-18_enterprise-node.md  2026-03-18_ruv5-enterprise-node-phase2-audit.md  2026-03-18_ruv7-cross-enterprise-phase2-audit.md  2026-03-18_sparse-merkle-tree.md  2026-03-18_state-commitment-audit.md  (+15 more)
lab/3-architect/: CLAUDE.md.example
lab/4-prover/: CLAUDE.md.example
lab/orchestrator/: ORCHESTRATOR.md
prover/: package-lock.json  package.json
prover/circuits/: batch_verifier.circom
prover/scripts/: export-verifier.js  generate-proof.js  setup.js  verify-proof.js
scripts/: download-circuit-artifacts.sh
validium/: README.md  ROADMAP.md  ROADMAP_CHECKLIST.md  docker-compose.dac.yml  docker-compose.monitoring.yml
validium/adapters/: .env.example  README.md  package-lock.json  package.json
validium/circuits/: README.md
validium/dac-node/: Dockerfile  package-lock.json  package.json  tsconfig.json
validium/docs/: POST_ROADMAP_TODO.md  PRODUCTION_ROADMAP.md  R&D_PIPELINE_REPORT.md  ROADMAP_CHECKLIST.md
validium/monitoring/: alerts.yml  prometheus.yml
validium/node/: .env.example  Dockerfile  OPERATIONS.md  README.md  STARTUP.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
zkl2/: Makefile  README.md  VISION.md  docker-compose.yml
zkl2/bridge/: go.mod
zkl2/contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json
zkl2/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FINAL_INTEGRATION_PLAN.md  POST_ROADMAP_TODO.md  PRODUCTION_IMPLEMENTATION_PLAN.md  PRODUCTION_ROADMAP.md  ROADMAP.md  ROADMAP_CHECKLIST.md  TECHNICAL_DECISIONS.md  VISION.md
zkl2/node/: .env.example  Dockerfile  STARTUP.md  go.mod  go.sum  integration_test.go
zkl2/prover/: Cargo.toml
zkl2/prover/aggregator/: Cargo.toml
zkl2/prover/aggregator/src/: aggregator.rs  folding.rs  lib.rs  pool.rs  tests.rs  tree.rs  types.rs  verifier_circuit.rs
zkl2/prover/circuit/: Cargo.toml
zkl2/prover/circuit/src/: circuit.rs  columns.rs  evm_gates.rs  gates.rs  lib.rs  prover.rs  tests.rs  types.rs  verifier.rs
zkl2/prover/cli/: Cargo.toml
zkl2/prover/cli/src/: main.rs  types.rs
zkl2/prover/evm-verifier/: Cargo.toml
zkl2/prover/evm-verifier/src/: lib.rs
zkl2/prover/witness/: Cargo.toml
zkl2/prover/witness/src/: call_context.rs  generator.rs  lib.rs  types.rs
zkl2/prover/witness/src/evm/: bitwise.rs  control.rs  crypto.rs  data_ops.rs  execution.rs  lifecycle.rs  math.rs  memory.rs  mod.rs  stack_ops.rs  tx.rs
zkl2/prover/witness/tests/: adversarial.rs
zkl2/prover/zkevm-integration/: Cargo.toml
zkl2/prover/zkevm-integration/src/: adapter.rs  lib.rs
zkl2/research/experiments/2026-03-19_plonk-migration/code/: Cargo.toml
zkl2/research/experiments/2026-03-19_plonk-migration/code/src/: groth16_bench.rs  halo2_bench.rs  main.rs
zkl2/research/experiments/2026-03-19_proof-aggregation/code/: Cargo.toml
zkl2/research/experiments/2026-03-19_proof-aggregation/code/src/: aggregation.rs  enterprise_circuit.rs  main.rs
zkl2/specs/units/2026-03-witness-generation/0-input/code/: Cargo.toml
zkl2/specs/units/2026-03-witness-generation/0-input/code/src/: arithmetic.rs  lib.rs
(+1208 files in other folders)
