[package]
name = "basis-aggregator"
version = "0.1.0"
edition = "2021"
description = "Proof aggregation pipeline for Basis Network zkEVM L2 -- ProtoGalaxy folding + Groth16 decider"
license = "BUSL-1.1"

[dependencies]
# Shared field arithmetic with circuit crate (BN254 scalar field)
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }

# Structured error handling
thiserror = "2"

# Deterministic hashing for proof deduplication
sha2 = "0.10"

# Randomness
rand = "0.8"

[dev-dependencies]
rand = "0.8"
