[package]
name = "basis-witness"
version = "0.1.0"
edition = "2021"
description = "Witness generator for Basis Network zkEVM L2 -- converts EVM execution traces to ZK prover witness tables"
license = "BUSL-1.1"

[dependencies]
# BN254 field arithmetic (arkworks ecosystem)
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"

# Serialization (Go executor produces JSON traces)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured error handling
thiserror = "2"

[dev-dependencies]
rand = "0.8"
