[package]
name = "plonk-migration-bench"
version = "0.1.0"
edition = "2021"
description = "Benchmark comparing Groth16 (arkworks) vs halo2-KZG for PLONK migration research"

[dependencies]
# Arkworks ecosystem for Groth16 baseline
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs"] }

# halo2 (PSE fork with KZG on BN254)
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", features = ["circuit-params"] }
halo2curves = "0.6"

# Utilities
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
